Первые шаги по внедрению SDK, установка заглушки для отладки

--- a/challenge/public/index.html
+++ b/challenge/public/index.html
@@ -6,6 +6,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&family=Audiowide&display=swap"
     rel="stylesheet">
+
+
+
+
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -21,6 +27,26 @@
 
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+
+     <!-- Подключаем заглушку Яндекс SDK -->
+    <script src="%PUBLIC_URL%/sdk.js"></script>
+    
+    <!-- Инициализируем SDK после загрузки -->
+    <script>
+      // Необязательно: можно сразу проинициализировать для глобального доступа
+      window.initializeYandexSDK = function() {
+        if (window.YaGames) {
+          YaGames.init().then(ysdk => {
+            console.log('SDK ready for use');
+            window.ysdk = ysdk;
+          });
+        }
+      };
+      
+      // Вызываем инициализацию при загрузке
+      window.addEventListener('load', window.initializeYandexSDK);
+    </script>
 
 </body>
 
